# asdlc-kit

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  install.sh
.claude/: settings.json
.claude/agents/: acceptance-agent.md  architect-agent.md  codebase-agent.md  developer-agent.md  devops-agent.md  ensemble-aggregator.md  orchestrator-agent.md  planner-agent.md  product-agent.md  qa-agent.md  reviewer-agent.md
.claude/commands/: factory-artifacts.md  factory-status.md  factory.md
.claude/hooks/: audit-log.sh  block-destructive.sh  block-secret-writes.sh  incomplete-pipeline-guard.sh  pipeline-resume-hint.sh  subagent-audit-log.sh  validate-artifact-schema.sh  validate-write-path.sh
.claude/rules/: ponytail.md  sdlc-contracts.md  sdlc-quality.md  sdlc-security.md
.claude/sdlc/: BEST_PRACTICES.md
docker/: Dockerfile  entrypoint.sh
docs/langraph-pipeline-feasibility/: FEASIBILITY.md
docs/setup/: docker.md  mcp-configs.md  (+1 more)
runtime/: README.md  __init__.py  agent_loader.py  checkpoint.py  claude_runner.py  cli.py  config.py  dashboard.py  graph.py  metrics.py  openrouter_runner.py  pyproject.toml  server.py  state.py  validation.py
runtime/nodes/: __init__.py  _common.py  acceptance.py  aggregate.py  approval.py  architect.py  developer.py  devops.py  escalate.py  planner.py  product.py  qa.py  readiness.py  review.py  validate.py
runtime/tests/: conftest.py  test_agent_loader.py  test_config.py  test_dashboard.py  test_graph_flow.py  test_metrics.py  test_openrouter_runner.py  test_runner_parse.py  test_state.py  test_validation.py
(+23 files in other folders)
